--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "virtual-keyboard",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./app/script/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
+    "lint": "./node_modules/.bin/eslint"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/Chapchik/virtual-keyboard/issues"
   },
-  "homepage": "https://github.com/Chapchik/virtual-keyboard#readme"
+  "homepage": "https://github.com/Chapchik/virtual-keyboard#readme",
+  "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  }
 }
