--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "virtual-keyboard",
   "version": "1.0.0",
   "description": "",
-  "main": "./app/script/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
-    "lint": "./node_modules/.bin/eslint"
+    "lint": "./node_modules/.bin/eslint",
+    "style": "sass --watch ./app/style/style.scss ./app/style/style.css"
   },
   "repository": {
     "type": "git",
@@ -21,9 +20,9 @@
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "sass": "^1.51.0"
   }
 }
